correction for deploy - 2nd attempt

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "http://flor3z.github.io.newToDo",
+  "homepage": "http://flor3z.github.io/newToDo",
   "name": "todolist",
   "version": "0.1.0",
   "private": true,
